# puh

./: .gitignore  README.md
exam/: MidtermExam.hs
homeworks/homework1/0036475679/: Exercises.hs  Homework.hs
homeworks/homework1/old/: Exercises.hs
homeworks/homework2/0036475679/: Exercises.hs  Homework.hs
homeworks/homework3/0036475679/: Exercises.hs  Homework.hs
homeworks/homework4/0036475679/: Exercises.hs  Homework.hs
homeworks/homework5/0036475679/: Exercises.hs  Homework.hs
homeworks/homework6/0036475679/: Exercises.hs  Homework.hs
lectures/: StringOp.hs  lecture10.hs  lecture11.hs  lecture12.hs  lecture2.hs  lecture5.hs  lecture6.hs  lecture7.hs  lecture7.lhs  lecture8.hs  lecture8.lhs  lecture9.hs  main.hs  puh-2016-lecture-09.lhs  puh-2016-lecture-10.lhs  puh-2017-lecture-11.lhs
lectures/code-cabal/: ChangeLog.md  LICENSE  counter.cabal
lectures/code-stack/counter/: counter.cabal
lectures/code-stack/counter/src/: Counts.hs  main.hs
lectures/code-stack/counter/src/Strings/: StringOp.hs
lectures/week1/: lecture1.hs
lectures/week2/: puh-2016-lecture-03.lhs
lectures/week3/: lecture4.hs
project/simpl/: simpl.cabal
project/simpl/examples/: factorial.txt  fibonacci.txt  squareRoot.txt
project/simpl/src/: Compile.hs  Exec.hs  Expression.hs  Main.hs  Parser.hs  Programs.hs  Statement.hs  test.txt
reviews/homework5/0036478324/: Exercises.hs  Homework.hs  review.txt
reviews/homework5/0036491132/: Exercises.hs  Homework.hs  review.txt
week1/: .lecture1.hs.swp  lecture1.hs
week2/: lecture2.hs
