name:                simpl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/simpl#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable compile
  hs-source-dirs:      src
  main-is:             Compile.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,parsec

executable simpl
  hs-source-dirs:      src
  main-is:             Exec.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,parsec
